--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -6,7 +6,7 @@
 %% DEBUG: various helper debug goodies
 \input{preamble/debug/commands}
 \input{preamble/debug/line-numbers}
-\input{preamble/debug/silence.tex}
+\input{preamble/debug/silence}
 
 %% Colors
 \input{preamble/general/colors}
@@ -49,6 +49,7 @@
 %% Hacky stuff, oftentimes overriding commands of other packages
 \input{preamble/hacks/custom-reference-boxes}
 \input{preamble/hacks/fix-qed}
+\input{preamble/hacks/fix-hyperref}
 \input{preamble/hacks/floatrow-parskip}
 
 %% User macros
