--- a/preamble/references/backref.tex
+++ b/preamble/references/backref.tex
@@ -15,3 +15,6 @@
     {}
     {\printtext[pagerefformat]{% use custom format
             \printlist[pageref][-\value{listtotal}]{pageref}}}}%
+
+%% NOTE: the `hyperlink` command in `pageref` formatting is tweaked
+%%         in `preamble/custom-reference-boxes.tex`
