chore(eqnlines): disable eqnlines for now
A lot of fixed will be present in the next release.
Will be enabled by default after proper testing.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/packages.tex
+++ b/preamble/math/packages.tex
@@ -53,4 +53,4 @@
 \usepackage[extdef]{delimset} % flexible typesetting and declaration delimeters sets
 
 %% TODO: fix/adapt a lot of stuff after the new release
-\usepackage{eqnlines} % modern framework for typesetting single- and multi-line equations
+% \usepackage{eqnlines} % modern framework for typesetting single- and multi-line equations
