--- a/preamble/layout/toc.tex
+++ b/preamble/layout/toc.tex
@@ -4,12 +4,12 @@
     {\hypersetup{hidelinks}
         \tableofcontents
 
-        %% Add list of structure environments
-        %%  -> see `thmtools` package for more customization
+        %% Add list of structured environments
+        %%  -> see `keytheorems` package documentation for more customization
         % \DeclareExpandableDocumentCommand{\listtheoremname}{}{List of Definitions, Remarks, \ldots}
         % \cleardoublepage\phantomsection
         % \currentpdfbookmark{\listtheoremname}{loe} % add PDF Index/Outline entry
-        % \listoftheorems[onlynamed, swapnumber]
+        % \listofkeytheorems[onlynamed, swapnumber, title=\listtheoremname]
 
         %% Add list of figures and tables
         %%  -> see `tocbibind` package (or maybe also `titletoc`)
