--- a/preamble/misc/inkscape.tex
+++ b/preamble/misc/inkscape.tex
@@ -4,10 +4,14 @@
 %% TODO: disable this for ArXiv submission (probably just leaving SVGs out will work fine)
 \usepackage{shellesc}
 \usepackage{filemod}
-\NewDocumentCommand{\includesvg}{O{0.8\linewidth} O{./figures/Inkscape/} m}{%
-    \filemodCmp{#2#3.pdf}{#2#3.svg}{}{% regenerate PDF+LaTeX code if SVG is newer
-        \ShellEscape{#2inkscape-export-to-latex "#2#3"}% use `inkscape-export-to-latex` script in the same directory
+\NewDocumentCommand{\exportInkscapeSVG}{O{./figures/Inkscape/} m}{%
+    \filemodCmp{#1#2.pdf}{#1#2.svg}{}{% regenerate PDF+LaTeX code if SVG is newer
+        \ShellEscape{#1inkscape-export-to-latex "#1#2"}% use `inkscape-export-to-latex` script in the same directory
     }%
+}
+%% the third argument is the name of the SVG file without the extension
+\NewDocumentCommand{\includeInkscapeSVG}{O{0.8\linewidth} O{./figures/Inkscape/} m}{%
+    \exportInkscapeSVG[#2]{#3}%
     \def\svgwidth{#1}% set the width of the figure
     \input{#2#3.pdf_tex}%
 }
