chore(inkscape): add alias for backwards compatibility
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/misc/inkscape.tex
+++ b/preamble/misc/inkscape.tex
@@ -15,3 +15,4 @@
     \def\svgwidth{#1}% set the width of the figure
     \input{#2#3.pdf_tex}%
 }
+\DeclareCommandCopy{\includesvg}{\includeInkscapeSVG} % alias
