perf(all): use more primitive command definitions
When possible, use more primitive command definitions using
\newcommand and friends, instead of \NewDocumentCommand and friends.

Provides a small performance improvement.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -21,7 +21,7 @@
     \vspace{1em}
 
     %% if `\ThesisTitleFront` is not defined, use `\ThesisTitle`
-    \ProvideExpandableDocumentCommand{\ThesisTitleFront}{}{\ThesisTitle}
+    \providecommand*{\ThesisTitleFront}{\ThesisTitle}
     % {\Huge \bfseries \ThesisTitleFront \par}
     {\fontsize{30pt}{36pt}\selectfont \bfseries
         \ThesisTitleFront \par}
