--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -10,7 +10,7 @@
 \usepackage[newparttoc, clearempty]{titlesec}
 
 %% NOTE: also include `\phantomsection` so that hyperlink anchors are properly placed 
-%%                                                     (even non-numbered subsections)
+%%                                                (even for non-numbered subsections)
 \titleformat{\section}   {\phantomsection\Large\sffamily\bfseries}{\thesection}   {0.8em}{}
 \titleformat{\subsection}{\phantomsection\large\sffamily\bfseries}{\thesubsection}{0.8em}{}
 \titleformat{\paragraph}[runin]{\phantomsection\normalsize\sffamily\bfseries}{\theparagraph}{0em}{}
