--- a/preamble/pdfA-compliance/LaTeX-find-glyph-name/LaTeX-find-glyph-name.tex
+++ b/preamble/pdfA-compliance/LaTeX-find-glyph-name/LaTeX-find-glyph-name.tex
@@ -28,7 +28,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \DeclareMathSymbol{\shortminus}{\mathbin}{AMSa}{"39}
-\NewDocumentCommand{\shortminusone}{}{\mspace{-1.2mu}\shortminus\mspace{-1.5mu} 1}
+\newcommand*{\shortminusone}{\mspace{-1.2mu}\shortminus\mspace{-1.5mu} 1}
 
 \begin{document}
 %% INCLUDE HERE THE PROBLEMATIC GLYPH (and ideally nothing else), for example:
