--- a/preamble/references/biblatex.tex
+++ b/preamble/references/biblatex.tex
@@ -13,7 +13,7 @@
 %% Add bibliography resource
 \addbibresource{preamble/bibliography.bib}
 
-\newcommand{\references}{
+\newcommand*{\references}{
     \defbibheading{bibintoclabel}[\bibname]{%
         \chapter*{##1}%
         \label{ch:References}%
