--- a/preamble/user/math.tex
+++ b/preamble/user/math.tex
@@ -1,6 +1,6 @@
 %% User math macros
-\NewDocumentCommand{\Sphere}{}{\ensuremath{\mathbb{S}}}
-\NewDocumentCommand{\Hyperboloid}{}{\ensuremath{\mathbb{H}}}
-\NewDocumentCommand{\CP}{}{\ensuremath{\mathbb{CP}}}
-\NewDocumentCommand{\AdS}{}{\ensuremath{\mathsf{AdS}}}
-\NewDocumentCommand{\spacedim}{}{\mathsfit{d}}
+\newcommand*{\Sphere}{\ensuremath{\mathbb{S}}}
+\newcommand*{\Hyperboloid}{\ensuremath{\mathbb{H}}}
+\newcommand*{\CP}{\ensuremath{\mathbb{CP}}}
+\newcommand*{\AdS}{\ensuremath{\mathsf{AdS}}}
+\newcommand*{\spacedim}{\mathsfit{d}}
