--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\NewExpandableDocumentCommand{\TeXturedVERSION}{}{1.2.0} %% TeXtured 2025-05-03
+\newcommand*{\TeXturedVERSION}{1.2.0} %% TeXtured 2025-05-03
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% NOTE: If you find any issues or have any suggestions, please open %%
 %%       an Issue on GitHub: https://github.com/jdujava/TeXtured     %%
