--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -1,63 +1,63 @@
 %% Thesis type: bachelor, master, doctoral
-\NewExpandableDocumentCommand{\ThesisType}{}{master}
+\newcommand*{\ThesisType}{master}
 
 %% Thesis title (exactly as in the formal assignment)
-\NewExpandableDocumentCommand{\ThesisTitle}{}{\TeXtured{} Manual}
+\newcommand*{\ThesisTitle}{\TeXtured{} Manual}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisTitle)
-\NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{TeXtured Manual \TeXturedVERSION}
+\newcommand*{\ThesisTitlePlaintext}{TeXtured Manual \TeXturedVERSION}
 %% Thesis title (if custom formatting is needed for the title page, defauls to \ThesisTitle)
-\NewExpandableDocumentCommand{\ThesisTitleFront}{}{
+\newcommand*{\ThesisTitleFront}{
     \ThesisTitle\\
     {\Huge\color{gray}\TeXturedVERSION}
 }
 
 %% Author of the thesis
-\NewExpandableDocumentCommand{\ThesisAuthor}{}{\textcolor{red}{Author's Name}}
+\newcommand*{\ThesisAuthor}{\textcolor{red}{Author's Name}}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisAuthor)
-\NewExpandableDocumentCommand{\ThesisAuthorPlaintext}{}{Author's Name}
+\newcommand*{\ThesisAuthorPlaintext}{Author's Name}
 
 %% Year when the thesis is submitted
-\NewDocumentCommand{\YearSubmitted}{}{2025}
+\newcommand*{\YearSubmitted}{2025}
 %% Year of the last revision, uncomment if it is different from \YearSubmitted
-% \NewDocumentCommand{\YearRevision}{}{2025}
+% \newcommand*{\YearRevision}{2025}
 
 %% University
-\NewDocumentCommand{\University}{}{Charles University}
+\newcommand*{\University}{Charles University}
 
 %% Name of the department or institute, where the work was officially assigned
 %% (according to the Organizational Structure of MFF UK in English,
 %% or a full name of a department outside MFF)
-\NewDocumentCommand{\Department}{}{\textcolor{red}{Name of the Department/Institute}}
+\newcommand*{\Department}{\textcolor{red}{Name of the Department/Institute}}
 
 %% Is it a Department (katedra), or an Institute (ústav)?
-\NewDocumentCommand{\DeptType}{}{Institute}
+\newcommand*{\DeptType}{Institute}
 
 %% Thesis supervisor: name, surname and titles
-\NewDocumentCommand{\Supervisor}{}{\textcolor{red}{Name, Surname, and Titles}}
+\newcommand*{\Supervisor}{\textcolor{red}{Name, Surname, and Titles}}
 %% Thesis co-supervisor: name, surname and titles (uncomment if applicable)
-% \NewDocumentCommand{\CoSupervisor}{}{Name, Surname, and Titles}
+% \newcommand*{\CoSupervisor}{Name, Surname, and Titles}
 
 %% Supervisor's department/institute (again according to Organizational structure of MFF)
-\NewDocumentCommand{\SupervisorsDepartment}{}{\textcolor{red}{Supervisor's Department/Institute}}
+\newcommand*{\SupervisorsDepartment}{\textcolor{red}{Supervisor's Department/Institute}}
 
 %% Study programme and specialization
-\NewDocumentCommand{\StudyProgramme}{}{\textcolor{red}{Study Programme}}
+\newcommand*{\StudyProgramme}{\textcolor{red}{Study Programme}}
 
 %% Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
-\NewDocumentCommand{\Abstract}{}{%
+\newcommand*{\Abstract}{%
     \textcolor{red}{Write abstract here.}
 }
 
 %% Subject (short description for PDF metadata)
-\NewExpandableDocumentCommand{\Subject}{}{%
+\newcommand*{\Subject}{%
     Write subject here.
 }
 
 %% Keywords (about 3-7)
-\NewExpandableDocumentCommand{\Keywords}{}{%
+\newcommand*{\Keywords}{%
     \textcolor{red}{Manual, Demo, Draft, WIP}
 }
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \Keywords)
-\NewExpandableDocumentCommand{\KeywordsPlaintext}{}{%
+\newcommand*{\KeywordsPlaintext}{%
     Manual, Demo, Draft, WIP
 }
