--- a/preamble/environments/init.tex
+++ b/preamble/environments/init.tex
@@ -37,7 +37,7 @@
     \IfBooleanT{#1}{\def\qedshift{1.5ex}}% if starred, set shift corresponding to big operators (\sum, ...)
     \IfValueT{#2}{\def\qedshift{#2}}%    % if optional argument is passed, set shift to the custom value
     \NewCommandCopy{\oldqed}{\qedsymbol}%
-    \RenewDocumentCommand{\qedsymbol}{}{\raisebox{-\qedshift}{\oldqed}}%
+    \renewcommand*{\qedsymbol}{\raisebox{-\qedshift}{\oldqed}}%
     \oldqedhere%
 }
 
