--- a/preamble/math/fonts.tex
+++ b/preamble/math/fonts.tex
@@ -1,7 +1,7 @@
 %% TODO: think about what style is appropriate
 %% Set the default bold math sans font to be `sbc` (sans bold condensed)
 %% https://tex.stackexchange.com/questions/27843/level-of-boldness-changeable
-\NewDocumentCommand{\mathsfbfdefault}{}{sbc}
+\newcommand*{\mathsfbfdefault}{sbc}
 \SetMathAlphabet{\mathsf}{bold}{T1}{\sfdefault}{\mathsfbfdefault}{n}
 % \SetMathAlphabet{\mathsf}{bold}{T1}{\sfdefault}{\bfdefault}{\sldefault}
 
@@ -77,7 +77,7 @@
 
 %% Shorter minus sign - https://tex.stackexchange.com/a/469724
 \DeclareMathSymbol{\shortminus}{\mathbin}{AMSa}{"39}
-\NewDocumentCommand{\shortminusone}{}{\mspace{-1.1mu}\scalemath{1.2}[1]{\shortminus}\mspace{-1.4mu} 1}
+\newcommand*{\shortminusone}{\mspace{-1.1mu}\scalemath{1.2}[1]{\shortminus}\mspace{-1.4mu} 1}
 
 
 %% HACK: Reduce verbosity of "No alphabet change ..." messages
