--- a/preamble/user/macros.tex
+++ b/preamble/user/macros.tex
@@ -1,6 +1,6 @@
 %% User macros
 
 %% TeXtured logo
-\NewExpandableDocumentCommand{\TeXtured}{}{\texorpdfstring{\textsf{\TeX{}tured}}{TeXtured}}
+\newcommand*{\TeXtured}{\texorpdfstring{\textsf{\TeX{}tured}}{TeXtured}}
 
 \usepackage{hologo} % Provides *TeX logos (for example `\hologo{pdfLaTeX}`)
